# python-nhi

./: CHANGELOG.md  README.md  pyproject.toml
src/nhi/: __init__.py  _nhi.py  nhi.py
tests/: test_check_nhi.py
